Fix vertical spacing by wrapping text node insside span in the parser

--- a/input.css
+++ b/input.css
@@ -270,19 +270,21 @@ span .MathJax_SVG{
 
 .example > .spacer:last-child,
 .sec:nth-last-child(6) > .spacer:last-child,
-.solution .spacer:last-child
+.inner-pr + .spacer
+/* .solution .spacer:last-child */
 {
   height: 0;
 }
 
-.spacer:has(+ .inner-pr){
+.spacer:has(+ .inner-pr),
+.spacer:has(+ .text)
+{
   height: 1.5rem;
 }
 
 .pr:has(.pause) + .spacer,
 .mathblock + .spacer,
-.pr:has(.solution) + .spacer,
-.inner-pr + .spacer
+.pr:has(.solution) + .spacer
 {
   display: none;
 }
